# signal-kernels

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  PUBLIC-CLAIM.md  PUBLIC-DISCLAIMER.md  README.md  USAGE.md
.github/workflows/: ci.yml
docs/brand/: README.md
examples/: demo_pipeline.cpp
include/algorithms/: _fft.hpp  _numeric.hpp  causal.hpp  changepoint.hpp  curvature.hpp  entropy.hpp  forecast.hpp  information.hpp
project-docs/specs/: SPEC-signal-kernels-forward-delivery.md
tests/: doctest_main.cpp  test_algorithms_causal.cpp  test_algorithms_changepoint.cpp  test_algorithms_curvature.cpp  test_algorithms_entropy.cpp  test_algorithms_fft.cpp  test_algorithms_forecast.cpp  test_algorithms_information.cpp  test_algorithms_numeric.cpp
